# fortran-date-type

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  date_type.f90
tests/: CMakeLists.txt  tests.f90
